src/objects/Unit_Allied_Charge_Txn_Dtl__c.object
<CustomObject>
    <fields>
        <fullName>Param_1__c</fullName>
        <label>Param 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_2__c</fullName>
        <label>Param 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_3__c</fullName>
        <label>Param 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit Type</label>
        <referenceTo>Project_Unit_Type__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Dtls</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Dtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Dtls</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Dtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Allied_Charge_Txn_Hdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Allied Charge Txn Hdr</label>
        <referenceTo>Unit_Allied_Charge_Txn_Hdr__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Dtls</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Dtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Number_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Number Structure</label>
        <referenceTo>Unit_Number_Structure__c</referenceTo>
        <relationshipLabel>Unit Allied Charge Txn Dtls</relationshipLabel>
        <relationshipName>Unit_Allied_Charge_Txn_Dtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit Allied Charge Txn Dtl</label>
    <nameField>
        <label>Unit Allied Charge Txn Dtl Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Allied Charge Txn Dtls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>